# SkyNet-ROS2

./: Dockerfile  README.md
skynet/: CMakeLists.txt  package.xml
skynet/config/: aideck_streamer.yaml  config.rviz  crazyflies.yaml  motion_capture.yaml  server.yaml  slam.rviz  teleop.yaml
skynet/data/: CMakeLists.txt  map.yaml  map_1720103532.pgm
skynet/launch/: multiranger_mapping_launch.py  multiranger_nav2_launch.py  multiranger_simple_mapper_launch.py  startup.launch.py
skynet/scripts/: aideck_streamer.py  crazyflie_server.py  simple_mapper_multiranger.py  vel_mux.py
skynet/src/: crazyflie_server.cpp  teleop.cpp
skynet/urdf/: crazyflie_description.urdf
skynet_interfaces/: CMakeLists.txt  package.xml
skynet_interfaces/msg/: ConnectionStatistics.msg  ConnectionStatisticsArray.msg  Status.msg
